--- a/dashboard.html
+++ b/dashboard.html
@@ -37,9 +37,10 @@
                 </div>
             </div>
         </nav>
+          
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column mt-5">
+            <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="./dist/assets/img/logobasiru.png" alt="..." />
                 <!-- Masthead Heading-->
