--- a/dashboard.html
+++ b/dashboard.html
@@ -368,7 +368,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <!-- MASUKAN DISINI-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">TEST</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Kompetensi</h2>
                                     <div style="padding: 10px">
                                         <script src="https://static.elfsight.com/platform/platform.js" async></script>
                                         <div class="elfsight-app-5b3a81cb-1e37-4396-972a-471f555b23f6" data-elfsight-app-lazy></div>
