--- a/dashboard.html
+++ b/dashboard.html
@@ -168,7 +168,8 @@
                     <div class="col"><p class="lead">Video pembelajaran di sini semoga bermanfaat dan dapat dijadikan referensi untuk diterapkan sesuai dengan kebutuhan</p></div>
                     <div class="col"><p class="lead">Jika ada video pembelajaran yang ingin di tampilkan di sini bisa kontak via email ya..</p></div>
                 </div>
-				
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=RRw4oZz2Yk1ADx7k&amp;list=PLSVFfypFuo_orkG1mqjMx1uRZOdnaiGyZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                
 				<div class="row mb-3">
                     <div class="col">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/HHWnDmyYbVs?si=2g3pCtblR0vN43zJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
