--- a/dashboard.html
+++ b/dashboard.html
@@ -191,10 +191,27 @@
     
         <section class="page-section bg-primary text-white mb-0" id="refleksi">
             <div class="container-fluid">
-               <a href="<iframe id="gform" src="https://docs.google.com/forms/d/e/1FAIpQLSdp4fvs2WA70L8E_zpOo77g1zpbhJB3C_DaVVt52hq_S9vTLQ/viewform?embedded=true" width="640" height="12199" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>" </a>
-            </div>
-                       
-                     </div>    
+           <iframe id="gform" src="https://docs.google.com/forms/d/e/1FAIpQLSdp4fvs2WA70L8E_zpOo77g1zpbhJB3C_DaVVt52hq_S9vTLQ/viewform?embedded=true" width="640" height="12199" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <script>
+var load = 0;
+
+document.getElementById('gform').onload = function(){
+    /*Execute on every reload on iFrame*/
+    load++;
+    if(load > 3){
+        /*Second reload is a submit*/
+        document.location = "https://www.basiru.my.id/dashboard.html";
+    }
+}
+</script>
+
+								</div>
+                                 		</div>
+						</div>
+					</div>
+				</div>
+			</div>
+        </div> 
         <!-- Contact Section-->
         <section class="page-section" id="contact">
             <div class="container">
