--- a/dashboard.html
+++ b/dashboard.html
@@ -256,6 +256,7 @@ document.getElementById('gform').onload = function(){
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
                             <button class="btn btn-primary btn-xl" type="submit">Send</button>
+                            <button type="button" class="btn btn-secondary btn-lg" disabled>Loading...</button>
                         </form>
                     </div>
                 </div>
