--- a/dashboard.html
+++ b/dashboard.html
@@ -139,7 +139,7 @@
         <section class="page-section bg-primary text-white mb-0" id="buku">
             <div class="container-fluid">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Buku</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Perpustakaan</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
